# attend-mlops

./: .dockerignore  .env.ai.example  .env.example  .gitignore  README.md  docker-compose.ai.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: .gitignore  config
configs/: stack.yaml
core/: dataset.py  monitoring.py  registry.py
data/sources/: download_lfw.py  export_attend.py
data/validation/: face_recognition_suite.py
models/face_recognition/configs/: thresholds.yaml  training.yaml
models/face_recognition/datasets/: lfw.py
models/face_recognition/loaders/: __init__.py  adaface.py  arcface.py  base.py  facenet.py
models/face_recognition/pipelines/: benchmark_pipeline.py  training_pipeline.py
models/face_recognition/plans/: benchmark_refactor.md
models/face_recognition/steps/: compute_metrics.py  compute_similarities.py  data_validation.py  evaluate.py  extract_embeddings.py  load_dataset.py  log_mlflow.py  preprocess.py  register.py  train.py
serving/: Dockerfile  __init__.py  config.py  main.py  requirements.txt  state.py  vision.py
